@@ -27,7 +27,7 @@
         <url/>
     </scm>
     <properties>
-        <java.version>17</java.version>
+        <maven.compiler.release>23</maven.compiler.release>
     </properties>
     <dependencies>
 
@@ -124,13 +124,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version> <!-- Ensure you're using at least this version -->
-                <configuration>
-                    <release>22</release>
-                    <compilerArgs>
-                        <!-- Only include if you're using preview features -->
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                </configuration>
             </plugin>
         </plugins>
     </build>
